--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
     <meta name="author" content="Glas Travels">
     <meta name="description" content="La compagnia di viaggi #1 al mondo!">
     <title>Glas Travels</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Main CSS -->
     <link href="css/main.css" rel="stylesheet">
+
+    <!-- FontAwesome -->
     <link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="font-awesome-4.3.0/css/font-awesome.css" rel="stylesheet">
+
+    <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- Flexslider  -->
     <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
@@ -41,7 +47,7 @@
 
         <!-- CONTENT -->
 
-        <div class="site_content">
+        <div id="site_content">
 
             <!--- CAROUSEL --->
 
@@ -208,10 +214,10 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap Javascript Core-->
+
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
+    <!-- <script src="js/docs.min.js"></script> -->
 
     <!-- scripts parts -->
 
@@ -221,6 +227,7 @@
     <script>
         $("#footer").load("footer.html");
     </script>
+
 </body>
 
 </html>
