--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar-default navbar navbar-fixed-top">
+<nav class="navbar-default navbar navbar-static-top">
     <div class="container">
 
         <!-- header -->
