Sistemato problema navbar su tutte le pagine
Chi tocca gli script gli spezzo le gambe

--- a/test.html
+++ b/test.html
@@ -9,14 +9,33 @@
     <meta name="author" content="Glas Travels">
     <meta name="description" content="La compagnia di viaggi #1 al mondo!">
     <title>Glas Travels</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
-    <link href="404.css" rel="stylesheet">
-    <script src="404.js"></script>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Main CSS -->
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+
+    <!-- MapGlyphs -->
+    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
+    <script src="flexslider/jquery.flexslider.js"></script>
     <script type="text/javascript" charset="utf-8">
         $(window).load(function () {
-            $('.404').404();
+            $('.flexslider').flexslider();
         });
     </script>
+
 </head>
 
 <body>
@@ -33,10 +52,10 @@
     <!-- FOTER -->
     <div id="footer"></div>
 
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap Javascript Core-->
+
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
+    <!-- <script src="js/docs.min.js"></script> -->
 
     <!-- scripts parts -->
 
