--- a/carrello.html
+++ b/carrello.html
@@ -9,17 +9,32 @@
     <meta name="author" content="Glas Travels">
     <meta name="description" content="La compagnia di viaggi #1 al mondo!">
     <title>Glas Travels</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Main CSS -->
     <link href="css/main.css" rel="stylesheet">
-    <link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="font-awesome-4.3.0/css/font-awesome.css" rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+
+    <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
+    <script src="flexslider/jquery.flexslider.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        $(window).load(function () {
+            $('.flexslider').flexslider();
+        });
+    </script>
 
 </head>
 
@@ -68,10 +83,10 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap Javascript Core-->
+
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
+    <!-- <script src="js/docs.min.js"></script> -->
 
     <!-- scripts parts -->
 
@@ -81,6 +96,7 @@
     <script>
         $("#footer").load("footer.html");
     </script>
+
 </body>
 
 </html>
