--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link href="css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="font-awesome-4.3.0/css/font-awesome.css" rel="stylesheet">
+    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
