Aggiornamento descr. Europa

--- a/test-bookingform.html
+++ b/test-bookingform.html
@@ -303,7 +303,7 @@
                     <div class="col-sm-4 ">
                         <i class="mg map-wrld-eu mg-6x"></i>
                         <h2>Europa</h2>
-                        <p>Regioni che dividono una storia, di opposizione all'est rappresentato dall'Impero Ottomano e la Russia Imperiale, e, almeno fino alla Prima guerra mondiale, di distinzione dall'ovest in quanto conservatori opposti alle moderne idee liberali, acquisite con il commercio sui mari e infine la Rivoluzione Francese. Dopo la Prima guerra mondiale, e ancor più dopo la Seconda, queste idee moderne in generale, e la democrazia liberale, attecchirono presto in Austria e in Germania. </p>
+                        <p>Vacanze e weekend a tema per scoprire l’Europa e le sue capitali Da Lisbona a Varsavia, da Atene alla Scandinavia, dalla Francia all’Austria. Le vacanze in Europa targate Glas Travels sono affascinanti e istruttive, nonché piacevoli e convenienti. Le proposte più allettanti riguardano i weekend in Europa “mirati”, ossia consigli e soluzioni per non perdere tempo e organizzare un fine settimana all’insegna - a seconda delle preferenze - dell’arte, dello sport, della buona tavola, della famiglia o della cura del proprio corpo. Molte sono le mete favolose anche per un soggiorno balneare in Europa. </p>
                         <p><a class="btn btn-default" href="europa.html" role="button">Vedi le offerte</a>
                         </p>
                     </div>
