--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -41,93 +41,96 @@
 <body>
     <div class="background_body">
 
-        <!--====== LOGO + HEADER + MENU ======-->
-
         <!--- LOGO + HEADER + MENU --->
 
         <div id="navbar"></div>
 
-        <!-- ===== BREADCRUMBS =====-->
-
+        <!-- PATH -->
         <div class="container">
-            <ol class="breadcrumb">
-                <li><a href="index.html">Home</a>
-                </li>
-                <li class="active">Profilo Aziendale</li>
-            </ol>
-        </div>
-        <!-- ===== Titolo della pagina =====-->
-        <!-- Contenuti della pagina-->
-
-        <div class="container">
-            <div class="row list-inline" id="chi_siamo_row">
-                <li>
-                    <img class="chi_siamo_img img-responsive hidden-xs" src="img/GlasTravelsLOGO.png" alt="Logo azienda">
-                </li>
-                <li>
-                    <h1 id="logo_profile">Glas Travels. </h1>
-                </li>
-                <li>
-                    <h1><small> Chi siamo. </small></h1>
-                </li>
+            <div class="row" id="path">
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="active">Profilo Aziendale</li>
+                </ol>
             </div>
-            <hr>
+        </div>
 
-            <div class="row">
-                <div class="col-sm-7">
-                    <p id="descrizione">Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
-                        <br>Fondata nel 2014 da quattro giovani ragazzi, Giorgia, Luca, Aleksandar e Sergio (da qui il nome Glas) ha fin da subito investito per poter dare il massimo ai propri clienti, compresi anche quelli un po' più esigenti.
-                        <br>In un solo anno, ha saputo soddisfare le esigenze di tutti creando scompiglio fra la concorrenza. Essendo l'agenzia <em>Glas Travels</em> operativa solo online, il sito è stato ottimizzato anche per mobile permettendo all'utente di scegliersi un tutto e per tutto il proprio viaggio comodamente da casa o da telefono/tablet.</p>
-                    <hr>
-                    <h1><small> Perchè noi. </small></h1>
-                    <p id="descrizione">Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Occasioni che vogliamo i nostri clienti colgano per confrontarsi con realtà particolarmente diverse da quelle che appartengono a tutti noi. In ogni nostra proposta non deve, in ogni caso, mancare lo stimolo culturale che saprà conquistare sia chi si avvicina per la prima volta ad un viaggio fuori dal proprio Paese, sia a chi, come noi, ne è da sempre un grandissimo appassionato. Guidarvi su di una strada nuova o in parte conosciuta, solo di rado è un mestiere, spesso è una passione. La differenza crediamo si possa sentire.
-                        <br>
-                        <br>Nell’augurarci di potervi avere tra i nostri clienti vogliamo che lasciate a casa ogni preoccupazione, vi vogliamo coccolati e, soprattutto, vogliamo che anche voi arriviate ad avere sempre maggiori curiosità, così come a noi capita ancora oggi di averne! È per tutti questi motivi, e per molti altri ancora, che abbiamo elaborato diverse proposte di viaggio per farvi vivere e vedere quello che noi stessi amiamo e vorremmo vedeste. Venite quindi con noi, con la nostra passione, a riscoprire cosa si trova nel mondo!</p>
+        <!-- CONTENT -->
+
+        <div id="site_content">
+
+            <!-- CHI SIAMO -->
+
+            <div class="container">
+                <div class="row list-inline" id="chi_siamo_row">
+                    <li>
+                        <img class="chi_siamo_img img-responsive hidden-xs" src="img/GlasTravelsLOGO.png" alt="Logo azienda">
+                    </li>
+                    <li>
+                        <h1 id="logo_profile">Glas Travels </h1>
+                    </li>
+                    <li>
+                        <h1><small> Chi siamo. </small></h1>
+                    </li>
                 </div>
-                <!-- ===== TAG SOCIALI  =====-->
-                <div class="col-sm-5 hidden-xs">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Le parole più cercate:</h3>
-                        </div>
-                        <div class="panel-body">
-                            <h1>Stati Uniti</h1>
-                            <h4>Francia</h4>
-                            <h2> Italia</h2>
-                            <h1>Asia</h1>
-                            <h2>Giappone</h2>
-                            <h5>Africa</h5>
-                            <h3> Dubai</h3>
-                            <h2>Las Vegas</h2>
-                            <h1> New York</h1>
-                            <h3>Coast-to-Coast</h3>
-                            <h2>Hawaii</h2>
-                            <h5>Cina</h5> </div>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-7">
+                        <p id="descrizione">Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
+                            <br>Fondata nel 2014 da quattro giovani ragazzi, Giorgia, Luca, Aleksandar e Sergio (da qui il nome Glas) ha fin da subito investito per poter dare il massimo ai propri clienti, compresi anche quelli un po' più esigenti.
+                            <br>In un solo anno, ha saputo soddisfare le esigenze di tutti creando scompiglio fra la concorrenza. Essendo l'agenzia <em>Glas Travels</em> operativa solo online, il sito è stato ottimizzato anche per mobile permettendo all'utente di scegliersi un tutto e per tutto il proprio viaggio comodamente da casa o da telefono/tablet.</p>
+                        <hr>
+                        <h1><small> Perchè noi. </small></h1>
+                        <p id="descrizione">Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Occasioni che vogliamo i nostri clienti colgano per confrontarsi con realtà particolarmente diverse da quelle che appartengono a tutti noi. In ogni nostra proposta non deve, in ogni caso, mancare lo stimolo culturale che saprà conquistare sia chi si avvicina per la prima volta ad un viaggio fuori dal proprio Paese, sia a chi, come noi, ne è da sempre un grandissimo appassionato. Guidarvi su di una strada nuova o in parte conosciuta, solo di rado è un mestiere, spesso è una passione. La differenza crediamo si possa sentire.
+                            <br>
+                            <br>Nell’augurarci di potervi avere tra i nostri clienti vogliamo che lasciate a casa ogni preoccupazione, vi vogliamo coccolati e, soprattutto, vogliamo che anche voi arriviate ad avere sempre maggiori curiosità, così come a noi capita ancora oggi di averne! È per tutti questi motivi, e per molti altri ancora, che abbiamo elaborato diverse proposte di viaggio per farvi vivere e vedere quello che noi stessi amiamo e vorremmo vedeste. Venite quindi con noi, con la nostra passione, a riscoprire cosa si trova nel mondo!</p>
                     </div>
+                    <!-- ===== TAG SOCIALI  =====-->
+                    <div class="col-sm-5 hidden-xs">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Le parole più cercate:</h3>
+                            </div>
+                            <div class="panel-body">
+                                <h1>Stati Uniti</h1>
+                                <h4>Francia</h4>
+                                <h2> Italia</h2>
+                                <h1>Asia</h1>
+                                <h2>Giappone</h2>
+                                <h5>Africa</h5>
+                                <h3> Dubai</h3>
+                                <h2>Las Vegas</h2>
+                                <h1> New York</h1>
+                                <h3>Coast-to-Coast</h3>
+                                <h2>Hawaii</h2>
+                                <h5>Cina</h5> </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
+
+            <!--===== FOOTER =====-->
+
+            <div id="footer"></div>
+
         </div>
 
-        <!--===== FOOTER =====-->
+        <!-- Bootstrap Javascript Core-->
 
-        <div id="footer"></div>
+        <script src="js/bootstrap.min.js"></script>
+        <!-- <script src="js/docs.min.js"></script> -->
 
-    </div>
+        <!-- scripts parts -->
 
-    <!-- Bootstrap Javascript Core-->
-
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/docs.min.js"></script> -->
-
-    <!-- scripts parts -->
-
-    <script>
-        $("#navbar").load("navbar.html");
-    </script>
-    <script>
-        $("#footer").load("footer.html");
-    </script>
+        <script>
+            $("#navbar").load("navbar.html");
+        </script>
+        <script>
+            $("#footer").load("footer.html");
+        </script>
 
 </body>
 
