--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <img class="featurette-image img-responsive" src="img/GlasTravelsLOGO.png" alt="Logo azienda">
                     </div>
                     <div class="col-sm-7">
-                        <h4 class="featurette-heading"><em id="logo_featurette">Glas Travels.</em> <span class="text-muted">Chi siamo.</span></h4>
+                        <h4 class="featurette-heading"><em id="logo_featurette">Glas Travels</em> <span class="text-muted">Chi siamo.</span></h4>
                         <p>Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
                             <br>Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Venite con noi, con la nostra passione, a riscoprire cosa si trova nel mondo! E ricordate: non come turisti, ma come ospiti!
                             <br>
