--- a/contatti.html
+++ b/contatti.html
@@ -51,85 +51,88 @@
 
             <!-- PATH -->
             <div class="container">
-                <div class="row" id="path">
-                    <ol class="breadcrumb">
-                        <li><a href="index.html">Home</a>
-                        </li>
-                        <li class="active">Contatti</li>
-                    </ol>
-                </div>
-            </div>
-
-            <!--- CONTACT FORM --->
-
-            <div class="container">
                 <div class="row">
-                    <form role="form" action="" method="post">
-                        <div class="col-lg-6">
-                            <div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Campo richiesto</strong>
-                            </div>
-                            <div class="form-group">
-                                <label for="InputName">Nome</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Mario Rossi" required>
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                    <div class="col-lg-12">
+                        <ol class="breadcrumb" id="path">
+                            <li><a href="index.html">Home</a>
+                            </li>
+                            <li class="active">Contatti</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <!--- CONTACT FORM --->
+
+                <div class="container">
+                    <div class="row">
+                        <form role="form" action="" method="post">
+                            <div class="col-lg-6">
+                                <div class="well well-sm"><strong><i style="margin-right: 20px;" class="glyphicon glyphicon-ok form-control-feedback"></i> Campo richiesto</strong>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="InputEmail">Email</label>
-                                <div class="input-group">
-                                    <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="esempio@esempio.com" required>
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                <div class="form-group">
+                                    <label for="InputName">Nome</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Mario Rossi" required>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="InputMessage">Messaggio</label>
-                                <div class="input-group">
-                                    <textarea name="InputMessage" placeholder="..." id="InputMessage" class="form-control" rows="5" required></textarea>
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                <div class="form-group">
+                                    <label for="InputEmail">Email</label>
+                                    <div class="input-group">
+                                        <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="esempio@esempio.com" required>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="InputReal">Quanto fa 4+3? (Simple Spam Checker)</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="InputReal" id="InputReal" required>
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                <div class="form-group">
+                                    <label for="InputMessage">Messaggio</label>
+                                    <div class="input-group">
+                                        <textarea name="InputMessage" placeholder="..." id="InputMessage" class="form-control" rows="5" required></textarea>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                    </div>
                                 </div>
+                                <div class="form-group">
+                                    <label for="InputReal">Quanto fa 4+3? (Simple Spam Checker)</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="InputReal" id="InputReal" required>
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                    </div>
+                                </div>
+                                <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
                             </div>
-                            <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
-                        </div>
-                    </form>
-                    <div class="col-lg-5 col-md-push-1">
-                        <address>
+                        </form>
+                        <div class="col-lg-5 col-md-push-1">
+                            <address>
                             <h3>Dove ci trovi?</h3>
                             <p class="lead">Purtroppo solo online! Altrimenti..<br>
                               Telefono: XXX-XXX-XXXX<br>
                               Fax: XXX-XXX-YYYY</p>
                         </address>
+                        </div>
                     </div>
+
                 </div>
-
             </div>
-
-            <!-- FOOTER -->
-
-            <div id="footer"></div>
-
         </div>
 
-        <!-- Bootstrap Javascript Core-->
+        <!-- FOOTER -->
 
-        <script src="js/bootstrap.min.js"></script>
-        <!-- <script src="js/docs.min.js"></script> -->
+        <div id="footer"></div>
 
-        <!-- scripts parts -->
+    </div>
 
-        <script>
-            $("#navbar").load("navbar.html");
-        </script>
-        <script>
-            $("#footer").load("footer.html");
-        </script>
+    <!-- Bootstrap Javascript Core-->
+
+    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/docs.min.js"></script> -->
+
+    <!-- scripts parts -->
+
+    <script>
+        $("#navbar").load("navbar.html");
+    </script>
+    <script>
+        $("#footer").load("footer.html");
+    </script>
 
 </body>
 
