--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/washington2000x550.jpg" alt="immagine Washington" />
+                        <img src="img/parigi2000x550.jpg" alt="immagine Parigi" />
                         <div class="slide_text">
-                            <div class="slide_title">Washington DC</div>
-                            <div class="slide_byline">Visita la famosa capitale Statunitense!
+                            <div class="slide_title">Parigi</div>
+                            <div class="slide_byline">Visita la famosa capitale francese!
                             </div>
                         </div>
                     </li>
