Aggiornata pagina carrello, ritocchi chisiamo, index, navbar

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -57,8 +57,10 @@
 
         <div id="navbar"></div>
 
-        <!-- PATH -->
         <div class="container">
+
+            <!-- PATH -->
+
             <div class="row">
                 <div class="col-lg-12">
                     <ol class="breadcrumb" id="path">
@@ -73,12 +75,16 @@
 
             <div class="container">
 
-                <!-- SIDEBAR -->
-
                 <!-- Content Row -->
+
                 <div class="row">
+
                     <!-- Sidebar Column -->
+
                     <div class="col-md-3">
+
+                        <!-- SIDEBAR -->
+
                         <div class="list-group">
                             <a href="chi_siamo.html" class="list-group-item active"><i class="md md-person"></i> Profilo aziendale</a>
                             <a href="crescita_economica.html" class="list-group-item"><i class="md md-insert-chart"></i> Crescita economica</a>
@@ -116,7 +122,7 @@
                     <div class="col-md-3 hidden-xs" id="tags">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title" id="descrizione">TAGS:</h3>
+                                <h3 class="panel-title" id="descrizione">TAGS</h3>
                             </div>
                             <div class="panel-body">
                                 <h1>Stati Uniti</h1>
