--- a/carrello.html
+++ b/carrello.html
@@ -27,14 +27,8 @@
     <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
 
-    <!-- Flexslider  -->
-    <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
-    <script src="flexslider/jquery.flexslider.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(window).load(function () {
-            $('.flexslider').flexslider();
-        });
-    </script>
+    <!-- Material Design iconic font -->
+    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 </head>
 
@@ -47,34 +41,41 @@
 
         <!--- page content --->
 
-        <div class="row-fluid" id="site_content">
+        <div class="container">
 
-            <div class="list-group col-2">
-                <span href="#" class="list-group-item list-group-item-info">
-                Area personale
-                </span>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-comment-o"></i> Lorem ipsum
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-search"></i> Lorem ipsum
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-user"></i> Lorem ipsum
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-folder-open-o"></i> Lorem ipsum <span class="badge">14</span>
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-bar-chart-o"></i> Lorem ipsumr <span class="badge">14</span>
-                </a>
-                <a href="#" class="list-group-item">
-                    <i class="fa fa-envelope"></i> Lorem ipsum
-                </a>
+            <!-- PATH -->
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <ol class="breadcrumb" id="path">
+                        <li><a href="index.html">Home</a>
+                        </li>
+                        <li>Area Personale</li>
+                        <li class="active">Carrello</li>
+                    </ol>
+                </div>
             </div>
 
-            <div class="col-*-8">
+            <div class="col-md-3">
+
+                <!-- SIDE MENU -->
+
+                <div class="list-group">
+                    <span href="#" class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
+                    <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                    <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i> Carrello</a>
+                    <a href="#" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                    <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                    <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                </div>
+
             </div>
+
+            <!-- SECTION CONTENT -->
+
+            <div class="col-lg-9">
+            </div>
+
         </div>
 
         <!-- FOOTER -->
