--- a/carrello.html
+++ b/carrello.html
@@ -39,11 +39,11 @@
 
         <div id="navbar"></div>
 
-        <!--- page content --->
+        <!--- PAGE --->
 
         <div class="container">
 
-            <!-- PATH -->
+            <!-- PATH ROW -->
 
             <div class="row">
                 <div class="col-lg-12">
@@ -56,24 +56,53 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <!-- PAGE CONTENT ROW -->
 
-                <!-- SIDE MENU -->
+            <div class="row">
 
-                <div class="list-group">
-                    <span href="#" class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
-                    <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                    <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i> Carrello</a>
-                    <a href="#" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                    <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                    <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                <div class="col-md-3">
+
+                    <!-- SIDE MENU -->
+
+                    <div class="list-group">
+                        <span class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
+                        <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i> Carrello</a>
+                        <a href="#" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                    </div>
+
                 </div>
 
-            </div>
+                <!-- SECTION CONTENT -->
 
-            <!-- SECTION CONTENT -->
+                <div class="col-md-9">
 
-            <div class="col-lg-9">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4 class="vcenter">Maldive</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                                <a class="vcenter">Fattura #534958039458</a>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="panel-body">
+                            <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail pull-left" />
+                            <div id="purchase-item-details pull-right">
+                                <p>Dal 11-07-2014 al 21-07-2014</p>
+                                <p>2 adulti</p>
+                                <p></p>
+                                <p class="pull-right">Totale: EUR 1600,00 - VISA</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
         </div>
