Aggiornata sidebar chi siamo
Messa in linea con lo stile della pagina carrello

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -39,15 +39,6 @@
         });
     </script>
 
-    <!-- Sidebar 
-    <link rel="stylesheet" href="css/sidebar.css" type="text/css">
-    <script src="js/sidebar.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(window).load(function () {
-            $('.sidebar').sidebar();
-        });
-    </script> -->
-
 </head>
 
 <body>
@@ -75,25 +66,26 @@
 
             <div class="container">
 
-                <!-- Content Row -->
+                <!-- PAGE CONTENT ROW -->
 
                 <div class="row">
 
-                    <!-- Sidebar Column -->
-
                     <div class="col-md-3">
 
-                        <!-- SIDEBAR -->
+                        <!-- SIDE MENU -->
 
                         <div class="list-group">
-                            <a href="chi_siamo.html" class="list-group-item active"><i class="md md-person"></i> Profilo aziendale</a>
+                            <a href="chi_siamo.html" class="list-group-item heading list-group-item-success"><i class="fa fa-user"></i> Profilo aziendale</a>
                             <a href="crescita_economica.html" class="list-group-item"><i class="md md-insert-chart"></i> Crescita economica</a>
                             <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
                             <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                             <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                         </div>
+
                     </div>
-                    <!-- Content Column -->
+
+                    <!-- COLUMN CONTENT -->
+
                     <div class="col-md-6">
                         <div class="row list-inline" id="chi_siamo_row">
                             <li>
@@ -116,7 +108,7 @@
                                 <br>Nell’augurarci di potervi avere tra i nostri clienti vogliamo che lasciate a casa ogni preoccupazione, vi vogliamo coccolati e, soprattutto, vogliamo che anche voi arriviate ad avere sempre maggiori curiosità, così come a noi capita ancora oggi di averne! È per tutti questi motivi, e per molti altri ancora, che abbiamo elaborato diverse proposte di viaggio per farvi vivere e vedere quello che noi stessi amiamo e vorremmo vedeste. Venite quindi con noi, con la nostra passione, a riscoprire cosa si trova nel mondo!</p>
                         </div>
                     </div>
-                    <!-- /.row -->
+                    <!-- /.ROW -->
 
                     <!-- ===== TAG SOCIALI  =====-->
                     <div class="col-md-3 hidden-xs" id="tags">
