--- a/navbar.html
+++ b/navbar.html
@@ -68,7 +68,7 @@
 
                 <li><a href="area_personale.html">Area Personale</a>
                 </li>
-                <li><a href="carrello.html" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-shopping-cart"></i><span class="badge">2</span></a>
+                <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i><span class="badge">2</span></a>
                 </li>
             </ul>
 
