--- a/carrello.html
+++ b/carrello.html
@@ -67,7 +67,7 @@
                     <div class="list-group">
                         <span class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
                         <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i> Carrello</a>
+                        <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i> Carrello</a>
                         <a href="#" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
                         <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
@@ -87,29 +87,49 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <a class="vcenter">Fattura #534958039458</a>
                             </div>
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail pull-left" />
-                            <div id="purchase-item-details pull-right">
-                                <p>Dal 11-07-2014 al 21-07-2014</p>
+                            <!-- <div class="container-fluid fill">
+                                <div class="row-fluid">
+
+                                    <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                                    <div class="hero-unit filler">
+                                        <p>Dal 11-07-2014 al 21-07-2014</p>
+                                        <p>2 adulti</p>
+                                        <p>Totale: EUR 1600,00 - VISA</p>
+                                        <a href="download_fattura.html">Fattura #534958039458</a>
+                                    </div>
+
+                                </div>
+                            </div> -->
+                            <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+
+                            <div class="purchase-item-details">
                                 <p>2 adulti</p>
-                                <p></p>
-                                <p class="pull-right">Totale: EUR 1600,00 - VISA</p>
+                                <p>Dal 11-07-2014 al 21-07-2014</p>
+                                <p>Totale: EUR 1600,00 - VISA</p>
+                                <p>Transazione # 404-2941210-6149129</p>
+                                <p></p><a href="download_fattura.html">Scarica fattura</a>
+                                </p>
+                                <p><a href="inserimento_recensione.html">Scrivi una recensione</a>
+                                </p>
                             </div>
+
                         </div>
                     </div>
-
                 </div>
-            </div>
 
+            </div>
         </div>
 
-        <!-- FOOTER -->
+    </div>
 
-        <div id="footer"></div>
+    <!-- FOOTER -->
+
+    <div id="footer"></div>
 
     </div>
 
