Pagine carrello e acquisti

--- a/acquisti.html
+++ b/acquisti.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">Carrello</li>
+                        <li class="active">I miei acquisti</li>
                     </ol>
                 </div>
             </div>
@@ -67,8 +67,8 @@
                     <div class="list-group">
                         <span class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
                         <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
+                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
                         <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
@@ -78,43 +78,6 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
-
-                    <div class="alert alert-danger" role="alert">
-                        <p>NB: L'inserimento nel carrello non corrisponde ad una prenotazione!</p>
-                    </div>
-
-                    <!-- AUSTRALIA -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Australia</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/square/australia550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <div class="alert alert-warning" role="alert">
-                                    <p>Questo articolo ha subito una variazione di prezzo</p>
-                                </div>
-                                <hr/>
-                                <p>2 adulti - 2 bambini</p>
-                                <p>Totale: EUR 3400,00</p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Acquista</button>
-                                <button type="button" class="btn btn-default">Rimuovi</button>
-                                <button type="button" class="btn btn-default">Salva per dopo</button>
-                            </div>
-
-                        </div>
-                    </div>
 
                     <!-- MALDIVE -->
 
@@ -134,38 +97,45 @@
                             <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1700,00</p>
+                                <p>2 adulti - 1 bambino</p>
+                                <p>Totale: EUR 2100,00 - VISA</p>
+                                <p>Transazione # 404-2941210-6149129</p>
+                                <p>Effettuata il: 22-04-2014</p>
                                 <hr/>
-                                <button type="button" class="btn btn-default">Acquista</button>
-                                <button type="button" class="btn btn-default">Rimuovi</button>
-                                <button type="button" class="btn btn-default">Salva per dopo</button>
+                                <button type="button" class="btn btn-default">Scarica fattura</button>
+                                <button type="button" class="btn btn-default">Scrivi una recensione</button>
                             </div>
 
                         </div>
                     </div>
 
-                    <hr/>
-
-                    <!-- ACQUISTA TUTTO -->
+                    <!-- ALASKA -->
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Totale</h4>
+                                <h4>Alaska</h4>
                             </div>
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
+                                <h4>dal 27-12-2010 al 03-01-2011</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <p>2 Viaggi</p>
-                            <p>Totale: EUR 5100,00</p>
-                            <hr/>
+                            <img src="img/square/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
-                            <button type="button" class="btn btn-default pull-right">Acquista tutto</button>
+                            <div class="purchase-item-details">
+                                <p>2 adulti</p>
+                                <p>Totale: EUR 1600,00 - VISA</p>
+                                <p>Transazione # 404-2941210-0056455</p>
+                                <p>Effettuata il: 13-08-2010</p>
+                                <hr/>
+                                <button type="button" class="btn btn-default">Scarica fattura</button>
+                                <button type="button" class="btn btn-default">Scrivi una recensione</button>
+                            </div>
+
                         </div>
                     </div>
 
