--- a/carrello.html
+++ b/carrello.html
@@ -108,6 +108,7 @@
                                 <p>2 adulti - 2 bambini</p>
                                 <p>Totale: EUR 3400,00</p>
                                 <hr/>
+                                <button type="button" class="btn btn-default">Modifica</button>
                                 <button type="button" class="btn btn-default">Acquista</button>
                                 <button type="button" class="btn btn-default">Rimuovi</button>
                                 <button type="button" class="btn btn-default">Salva per dopo</button>
