--- a/carrello.html
+++ b/carrello.html
@@ -65,7 +65,7 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <span class="list-group-item list-group-item-heading list-group-item-success">Area personale</span>
+                        <span class="list-group-item list-group-item-primary">Area personale</span>
                         <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
@@ -79,8 +79,9 @@
 
                 <div class="col-md-9">
 
-                    <div class="alert alert-danger" role="alert">
-                        <p>NB: L'inserimento nel carrello non corrisponde ad una prenotazione!</p>
+                    <div class="alert alert-info" role="alert">
+                        <i class="fa fa-info-circle"></i>
+                        <span class="sr-only">Error:</span> L'inserimento nel carrello non corrisponde ad una prenotazione!
                     </div>
 
                     <!-- AUSTRALIA -->
@@ -93,7 +94,7 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
+                                <h4>dal 11-07-2015 al 21-07-2015</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -101,12 +102,9 @@
                             <img src="img/square/australia550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <div class="alert alert-warning" role="alert">
-                                    <p>Questo articolo ha subito una variazione di prezzo</p>
-                                </div>
-                                <hr/>
                                 <p>2 adulti - 2 bambini</p>
-                                <p>Totale: EUR 3400,00</p>
+                                <p>Totale: EUR 3400,00
+                                </p>
                                 <hr/>
                                 <button type="button" class="btn btn-default">Modifica</button>
                                 <button type="button" class="btn btn-default">Acquista</button>
@@ -127,7 +125,7 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
+                                <h4>dal 11-07-2015 al 21-07-2015</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -135,9 +133,15 @@
                             <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
+                                <div class="alert alert-warning" role="alert">
+                                    <i class="fa fa-exclamation-triangle"></i>
+                                    <span class="sr-only">Error:</span> Questo articolo ha subito una variazione di prezzo
+                                </div>
+                                <hr/>
                                 <p>2 adulti</p>
                                 <p>Totale: EUR 1700,00</p>
                                 <hr/>
+                                <button type="button" class="btn btn-default">Modifica</button>
                                 <button type="button" class="btn btn-default">Acquista</button>
                                 <button type="button" class="btn btn-default">Rimuovi</button>
                                 <button type="button" class="btn btn-default">Salva per dopo</button>
