--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="img/maldive2000x550.jpg" alt="immagine Maldive" />
                         <div class="slide_text">
                             <div class="slide_title">Maldive</div>
-                            <div class="slide_byline">Promozione 799€ per 2.
+                            <div class="slide_byline">Promozione 3000€ per 2.
                             </div>
                         </div>
                     </li>
@@ -89,7 +89,7 @@
                         <img src="img/parigi2000x550.jpg" alt="immagine Parigi" />
                         <div class="slide_text">
                             <div class="slide_title">Parigi</div>
-                            <div class="slide_byline">Visita la famosa capitale francese!
+                            <div class="slide_byline">Visita la famosa capitale francese! Promozione valida per novelli sposi.
                             </div>
                         </div>
                     </li>
@@ -195,7 +195,7 @@
                         <img class="featurette-image img-responsive" src="img/GlasTravelsLOGO.png" alt="Logo azienda">
                     </div>
                     <div class="col-sm-7">
-                        <h4 class="featurette-heading"><em id="logo_featurette">Glas Travels</em> <span class="text-muted">Chi siamo.</span></h4>
+                        <h4 class="featurette-heading"><em id="logo_featurette">Glas Travels </em> <span class="text-muted">Chi siamo.</span></h4>
                         <p>Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
                             <br>Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Venite con noi, con la nostra passione, a riscoprire cosa si trova nel mondo! E ricordate: non come turisti, ma come ospiti!
                             <br>
