--- a/navbar.html
+++ b/navbar.html
@@ -49,7 +49,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="chi_siamo.html">Profilo aziendale</a>
                         </li>
-                        <li><a href="crescita_economica.html">Crescita economica</a>
+                        <li><a href="business.html">Business</a>
                         </li>
                         <li><a href="tof.html">Termini e Condizioni</a>
                         </li>
