--- a/contatti.html
+++ b/contatti.html
@@ -27,14 +27,9 @@
     <!-- MapGlyphs -->
     <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
 
-    <!-- Flexslider  -->
-    <link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
-    <script src="flexslider/jquery.flexslider.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(window).load(function () {
-            $('.flexslider').flexslider();
-        });
-    </script>
+    <!-- Material Design iconic font -->
+    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+
 
 </head>
 
@@ -45,80 +40,98 @@
 
         <div id="navbar"></div>
 
-        <!-- CONTENT -->
-
-        <div id="site_content">
+        <div class="container">
 
             <!-- PATH -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <ol class="breadcrumb" id="path">
-                            <li><a href="index.html">Home</a>
-                            </li>
-                            <li class="active">Contatti</li>
-                        </ol>
-                    </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <ol class="breadcrumb" id="path">
+                        <li><a href="index.html">Home</a>
+                        </li>
+                        <li class="active">Azienda</li>
+                    </ol>
                 </div>
+            </div>
 
-                <!--- CONTACT FORM --->
+            <!-- CONTENT -->
 
-                <div class="container">
-                    <div class="row">
+            <div class="container">
+
+                <!-- PAGE CONTENT ROW -->
+
+                <div class="row">
+
+                    <div class="col-md-3">
+
+                        <!-- SIDE MENU -->
+
+                        <div class="list-group">
+                            <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
+                            <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
+                            <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                            <a href="sicurezza.html" class="list-group-item list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                            <a href="contatti.html" class="list-group-item heading list-group-item-success"><i class="md md-email"></i> Contatti</a>
+                        </div>
+
+                    </div>
+
+                    <!-- COLUMN CONTENT -->
+
+                    <div class="col-md-6">
+
+                        <!--- CONTACT FORM --->
+
                         <form role="form" action="" method="post">
-                            <div class="col-lg-6">
-                                <div class="well well-sm"><strong><i style="margin-right: 20px;" class="glyphicon glyphicon-ok form-control-feedback"></i> Campo richiesto</strong>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputName">Nome</label>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Mario Rossi" required>
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputEmail">Email</label>
-                                    <div class="input-group">
-                                        <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="esempio@esempio.com" required>
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputMessage">Messaggio</label>
-                                    <div class="input-group">
-                                        <textarea name="InputMessage" placeholder="..." id="InputMessage" class="form-control" rows="5" required></textarea>
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputReal">Quanto fa 4+3? (Simple Spam Checker)</label>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="InputReal" id="InputReal" required>
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
-                                    </div>
-                                </div>
-                                <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
+                            <div class="well well-sm"><strong><i style="margin-right: 20px;" class="glyphicon glyphicon-ok form-control-feedback"></i> Campo richiesto</strong>
                             </div>
+                            <div class="form-group">
+                                <label for="InputName">Nome</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="InputName" id="InputName" placeholder="Mario Rossi" required>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail">Email</label>
+                                <div class="input-group">
+                                    <input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="esempio@esempio.com" required>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputMessage">Messaggio</label>
+                                <div class="input-group">
+                                    <textarea name="InputMessage" placeholder="..." id="InputMessage" class="form-control" rows="5" required></textarea>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputReal">Quanto fa 4+3? (Simple Spam Checker)</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="InputReal" id="InputReal" required>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
+                                </div>
+                            </div>
+                            <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
                         </form>
-                        <div class="col-lg-5 col-md-push-1">
-                            <address>
+                    </div>
+                    <div class="col-md-3">
+                        <address>
                             <h3>Dove ci trovi?</h3>
                             <p class="lead">Purtroppo solo online! Altrimenti..<br>
                               Telefono: XXX-XXX-XXXX<br>
                               Fax: XXX-XXX-YYYY</p>
                         </address>
-                        </div>
                     </div>
-
+                    <!-- /.ROW -->
                 </div>
             </div>
         </div>
-
-        <!-- FOOTER -->
-
-        <div id="footer"></div>
-
     </div>
+    <!-- FOOTER -->
+
+    <div id="footer"></div>
 
     <!-- Bootstrap Javascript Core-->
 
@@ -133,6 +146,10 @@
     <script>
         $("#footer").load("footer.html");
     </script>
+    <script>
+        $("#sidebar").load("sidebar.html");
+    </script>
+
 
 </body>
 
