--- a/carrello.html
+++ b/carrello.html
@@ -65,7 +65,7 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <span class="list-group-item list-group-item-primary">Area personale</span>
+                        <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="#" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
