--- a/navbar.html
+++ b/navbar.html
@@ -66,7 +66,7 @@
                 <li><a href="blog.html">Blog</a>
                 </li>
 
-                <li><a href="area_personale.html">Area Personale</a>
+                <li><a href="profilo.html">Area Personale</a>
                 </li>
                 <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">2</span></a>
                 </li>
